# invenio-rdm-domain-records

./: .gitignore  MANIFEST.in  pyproject.toml
docs/source/: conf.py  index.rst
src/invenio_rdm_domain_records/: __init__.py  ext.py
src/invenio_rdm_domain_records/records/: api.py
src/invenio_rdm_domain_records/records/jsonschemas/records/: domain-record-v6.0.0.json
src/invenio_rdm_domain_records/records/mappings/os-v2/rdmdomainrecords/drafts/: domain-draft-v6.0.0.json
src/invenio_rdm_domain_records/records/mappings/os-v2/rdmdomainrecords/records/: domain-record-v6.0.0.json
src/invenio_rdm_domain_records/records/systemfields/: __init__.py  slow_constant.py
